--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,24 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  
+  
   <body>
+    
+    <header>
+      <div fclass="header">
+        <h1>風水</h1>
+      </div>
+      
+      <div id="wrapper">
+        <uul>
+          <li>menu1</li>
+          <li>menu2</li>
+          <li>menu3</li>
+          <li>menu4</li>
+        </uul>
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
