--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
     
     <header>
       <div fclass="header">
-        <h1>風水</h1>
+        <h1>株式会社 Enfel</h1>
       </div>
       
-      <div id="wrapper">
+      <div id="wwarapperr">
         <uul>
           <li>menu1</li>
           <li>menu2</li>
